registration-report-builder/main/default/objects/Registration_Report_Setting__mdt/Registration_Report_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Registration Report Setting</label>
    <pluralLabel>Registration Report Settings</pluralLabel>
</CustomObject>