registration-report-builder/main/default/objects/Registration_Report_Setting__mdt/fields/Course_Name_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Course_Name_Placeholder__c</fullName>
    <description>Example text shown in the Course Name filter box.</description>
    <inlineHelpText>Leave blank to use the built-in default: e.g. Swim Lessons</inlineHelpText>
    <label>Course Name Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>