registration-report-builder/main/default/objects/Registration_Report_Setting__mdt/fields/Course_Session_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Course_Session_Placeholder__c</fullName>
    <label>Course Session Placeholder</label>
    <description>Example text shown in the Course Session filter box. Leave blank to use the built-in default.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>