registration-report-builder/main/default/objects/Registration_Report_Setting__mdt/fields/Folder_Name_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Folder_Name_Placeholder__c</fullName>
    <label>Folder Name Placeholder</label>
    <description>Example text shown when naming a new saved report folder. Leave blank to use the built-in default.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>