registration-report-builder/main/default/objects/Registration_Report_Setting__mdt/fields/Program_Name_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Program_Name_Placeholder__c</fullName>
    <description>Example text shown in the Program Name filter box.</description>
    <inlineHelpText>Leave blank to use the built-in default: e.g. Aquatics</inlineHelpText>
    <label>Program Name Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>